--- a/archiver.conf
+++ b/archiver.conf
@@ -3,10 +3,10 @@ tempdir: tmp
 cdrdir: cdrs
 destination_dir: calls
 logfilerotation: daily
-logfile: fetcher.log
-acct_username: ryan@iris-sys.com
+logfile: cdr_archiver.log
+acct_username: rdelgrosso@ringrx.com
 acct_password: password
-portal_url: https://my.siply.co
+portal_url: https://my.dev.ringrx.com
 # Valid tokens for use in naming are
 # {id} - cdr id
 # {responsible_party} - Responsible Party
@@ -22,8 +22,8 @@ portal_url: https://my.siply.co
 # {aleg_holdtime} - aleg_holdtime
 # {bleg_holdtime} - bleg_holdtime
 # {tags} - tags
-destination_filename: "{type}_{id}_{caller}_{called}_{created}"
+destination_filename: '{start_time}_{id}_{calling_party}_{called_party}_{caller_id_name}'
 delete_messages_after_fetch: false
 # DEBUG < INFO < WARN < ERROR < FATAL < UNKNOWN
-loglevel: Logger::WARN
+loglevel: Logger::DEBUG
 
